# realtime-train-display

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: api.py  rtt.py  rtt_parser.py
src/rtt_api/: api.py  trainservice.py
src/rtt_display/: board.py  display.py  rtt_parser.py
